index: bold some words

--- a/pages/index.yaml
+++ b/pages/index.yaml
@@ -524,8 +524,8 @@ body:       |
             </ul>
             </p>
 
-            <p>We are part of a community of learning in which compassionate
-            care for one another is part of our spiritual and social charter.
+            <p<b>>We are part of a community of learning in which compassionate
+            care for one another is part of our spiritual and social charter</b>.
             Consequently, compliance with these protocols is an expectation for
             everyone enrolled in this course. If a student refuses to comply
             with the University’s health and safety protocols, the student must
