reading01: update title

--- a/pages/reading01.yaml
+++ b/pages/reading01.yaml
@@ -1,4 +1,4 @@
-title:      "Reading 01: Introduction"
+title:      "Reading 01: Hardware, Operating Systems"
 icon:       fa-book
 navigation: []
 internal:
