reading01: add house of cards

--- a/pages/reading01.yaml
+++ b/pages/reading01.yaml
@@ -25,6 +25,8 @@ body:       |
     [Reading 01 Quiz].
 
     </div>
+    
+    <img src="static/img/house.png" class="pull-right" style="margin-left: 10px;">
 
     ## Course Overview
 
