--- a/pages/reading03.yaml
+++ b/pages/reading03.yaml
@@ -97,7 +97,7 @@ body:       |
     - Your program may only use I/O system calls such as [open], [read], and
       [close] to access the contents of each file.
 
-    - Your program must use the `SHA1_Init`, `SHA1_Update1`, and `SHA1_Final`
+    - Your program must use the `SHA1_Init`, `SHA1_Update`, and `SHA1_Final`
       functions provided by [OpenSSL].
 
     - Your program must not have any resource leaks or memory errors as
