reading0{1,3}: add new students

--- a/static/yaml/reading01.yaml
+++ b/static/yaml/reading01.yaml
@@ -2,6 +2,8 @@
   - eamonlm
 - - chunt4
   - eamonlm
+- - csaca
+  - sambattalio
 - - dtong
   - eamonlm
 - - emeier
@@ -114,4 +116,3 @@
   - sambattalio
 - - zkreft
   - cyoun0426
-
