--- a/static/yaml/reading03.yaml
+++ b/static/yaml/reading03.yaml
@@ -2,6 +2,8 @@
   - jcharbon-nd
 - - chunt4
   - sambattalio
+- - csaca
+  - cyoun0426
 - - dtong
   - eamonlm
 - - emeier
@@ -114,4 +116,3 @@
   - mzachlin
 - - zkreft
   - cyoun0426
-
