--- a/static/yaml/schedule.yaml
+++ b/static/yaml/schedule.yaml
@@ -11,6 +11,8 @@
             link:       https://docs.google.com/presentation/d/18hEi9j3dOctyxd1NhvLI8v6DSjUz4DcO9O-T2ixMHW4/edit?usp=sharing
           - name:       Slides
             link:       https://docs.google.com/presentation/d/1-OAMXWRHcKutrrfSqGJ0u20iy8FQ9ANQ67EoVyu7JNM/edit?usp=sharing
+          - name:       Panopto
+            link:       https://notredame.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=0d2f99a3-09ba-4ada-b954-ac140106390a
 
       - date:           Thu 08/13
         topics:         OS Taxonomy, History, Themes
