Update TA assignments

--- a/static/yaml/reading01.yaml
+++ b/static/yaml/reading01.yaml
@@ -38,6 +38,8 @@
   - mzachlin
 - - kduffy5
   - mzachlin
+- - kweingar
+  - sambattalio
 - - lweller
   - jcharbon-nd
 - - mcastel3
@@ -94,8 +96,6 @@
   - sambattalio
 - - sclarin2
   - ginglis13
-- - shnat
-  - mzachlin
 - - slee54
   - eamonlm
 - - srodrig9
