--- a/static/yaml/reading02.yaml
+++ b/static/yaml/reading02.yaml
@@ -38,6 +38,8 @@
   - cyoun0426
 - - kduffy5
   - ginglis13
+- - kweingar
+  - sambattalio
 - - lweller
   - cyoun0426
 - - mcastel3
@@ -94,8 +96,6 @@
   - mzachlin
 - - sclarin2
   - eamonlm
-- - shnat
-  - sambattalio
 - - slee54
   - ginglis13
 - - srodrig9
