--- a/static/yaml/reading03.yaml
+++ b/static/yaml/reading03.yaml
@@ -38,6 +38,8 @@
   - jdelledonne
 - - kduffy5
   - sambattalio
+- - kweingar
+  - cyoun
 - - lweller
   - sambattalio
 - - mcastel3
@@ -94,8 +96,6 @@
   - mzachlin
 - - sclarin2
   - sambattalio
-- - shnat
-  - jdelledonne
 - - slee54
   - cyoun0426
 - - srodrig9
