schedule: add Panopto video (2020-08-20)

--- a/static/yaml/schedule.yaml
+++ b/static/yaml/schedule.yaml
@@ -39,6 +39,8 @@
         items:
           - name:       Slides
             link:       https://docs.google.com/presentation/d/1xdHjO8111lhdaDX-EPJ8ASPMnnkmXzYCIzok33jd6Sg/edit?usp=sharing
+          - name:       Panopto
+            link:       https://notredame.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=ebed14ec-1407-4d95-a0fa-ac1d010925f9
 
 - name:     Scheduling
   days:
