--- a/pages/project02.yaml
+++ b/pages/project02.yaml
@@ -62,7 +62,7 @@ body:       |
     to implement a **client library** for the described [pub/sub] system.
     Additionally, you are to utilize this library to a simple **chat
     application**.  Both the **client library** and the **chat application**
-    are due by **midnight** on **Monday, October 14, 2019**.
+    are due by **noon** on **Saturday, September 19, 2020**.
 
     More details about this project and your deliverables are described below.
 
