--- a/static/yaml/schedule.yaml
+++ b/static/yaml/schedule.yaml
@@ -121,10 +121,12 @@
             link:       https://notredame.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=bb3ea9c3-6514-46fe-afad-ac370106fc2b
 
       - date:           Thu 09/17
-        topics:         Deadlock
+        topics:         Concurrency Bugs
         items:
           - name:       Slides
             link:       https://docs.google.com/presentation/d/1RH3gX0C-3RLy7iyc2Y9g3jNs2t8949VTeKlZaPEu3UQ/edit?usp=sharing
+          - name:       Panopto
+            link:       https://notredame.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=f28eaf6b-b5b5-4088-8864-ac3900fd6b8b
           
       - date:           Sat 09/19
         assignments:
@@ -135,9 +137,7 @@
 - name:     Exam 01
   days:
       - date:           Tue 09/22
-        topics:         ''
-        items:
-          - name:       Checklist 01
+        topics:         Review
 
       - date:           Thu 09/24
         topics:         ''
@@ -221,9 +221,7 @@
 - name:     Exam 02
   days:
       - date:           Tue 11/10
-        topics:         ''
-        items:
-          - name:       Checklist 02
+        topics:         Review
 
       - date:           Tue 11/12
         topics:         ''
