Add option to submit quiz on website

--- a/pages/project01.yaml
+++ b/pages/project01.yaml
@@ -521,6 +521,9 @@ body:       |
     <script>
     loadQuiz('static/json/project01.json');
     </script>
+    
+    <pre style="display: none;" id="dr-container" class="codehilite"><code id="dredd-response"></code></pre>
+
 
     The results of the quiz should look like the following:
 
