--- a/pages/project02.yaml
+++ b/pages/project02.yaml
@@ -632,6 +632,9 @@ body:       |
     loadQuiz('static/json/project02.json');
     </script>
 
+    <pre style="display: none;" id="dr-container" class="codehilite"><code id="dredd-response"></code></pre>
+
+
     The results of the quiz should look like the following:
 
         :::text
