--- a/pages/reading02.yaml
+++ b/pages/reading02.yaml
@@ -72,6 +72,8 @@ body:       |
     loadQuiz('static/json/reading02.json');
     </script>
 
+    <pre style="display: none;" id="dr-container" class="codehilite"><code id="dredd-response"></code></pre>
+
     ## Program
 
     For this week's program, you are to modify the `program.c` to implement a
