--- a/pages/reading08.yaml
+++ b/pages/reading08.yaml
@@ -60,6 +60,8 @@ body:       |
     loadQuiz('static/json/reading08.json');
     </script>
 
+    <pre style="display: none;" id="dr-container" class="codehilite"><code id="dredd-response"></code></pre>
+
     ### Program
 
     For this week, you are to implement a `program` that translates **16-bit
