--- a/pages/reading09.yaml
+++ b/pages/reading09.yaml
@@ -50,6 +50,8 @@ body:       |
     loadQuiz('static/json/reading09.json');
     </script>
 
+    <pre style="display: none;" id="dr-container" class="codehilite"><code id="dredd-response"></code></pre>
+
     ### Program
 
     For this week, you are to implement a `program` that translates **8-bit
